SERVER-13822 check for replSet pointer in resync command

(cherry picked from commit c10e8282a7af38f8512e911a14889e14df8a2c6a)

Conflicts:
	src/mongo/db/repl/resync.cpp