src/mongo/db/repl/resync.cpp
@@ -65,6 +65,10 @@ namespace mongo {
                          BSONObjBuilder& result,
                          bool fromRepl) {
             if (replSettings.usingReplSets()) {
+                if (!theReplSet) {
+                    errmsg = "no replication yet active";
+                    return false;
+                }
                 if (theReplSet->isPrimary()) {
                     errmsg = "primaries cannot resync";
                     return false;
